--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "reflect-metadata": "^0.1.10",
+    "rimraf": "^3.0.2",
     "routing-controllers": "^0.9.0",
     "routing-controllers-openapi": "^3.1.0",
     "typedi": "^0.8.0",
