--- a/src/swagger/author/updateSw.yaml
+++ b/src/swagger/author/updateSw.yaml
@@ -22,7 +22,7 @@ paths:
               properties:
                 name:
                   type: string
-                is_super:
+                is_visiblee:
                   type: boolean
       responses:
         200:
