feat: Growth CRUD

--- a/src/swagger/growth/searchSw.yaml
+++ b/src/swagger/growth/searchSw.yaml
@@ -1,9 +1,9 @@
 paths:
-  /admin/search:
+  /growth:
     get:
       tags:
-        - Admin
-      summary: Find by keyword
+        - Growth
+      summary: Find All growth
       parameters:
         - name: limit
           in: query
@@ -18,21 +18,6 @@ paths:
           description: pageNumber
           schema:
             type: integer
-
-        - name: column
-          in: query
-          required: false
-          description: 분류 기준
-          schema:
-            type: string
-            enum: [admin_id, name, email, phone_number]
-
-        - name: keyword
-          in: query
-          required: false
-          description: 검색 단어
-          schema:
-            type: string
 
       responses:
         200:
@@ -62,26 +47,14 @@ paths:
                     type: array
                     items:
                       properties:
-                        admin_id:
+                        id:
+                          type: number
+                        title:
                           type: string
-                        password:
+                        content:
                           type: string
-                        name:
-                          type: string
-                        email:
-                          type: string
-                          format: email
-                        phone_number:
-                          type: string
-                        is_super:
+                        is_visible:
                           type: boolean
-                        profile_img:
-                          type: string
-                        self_introduction:
-                          type: string
-                        last_login:
-                          type: string
-                          format: date
                         create_at:
                           type: string
                           format: date
