--- a/src/swagger/workItem/findOneSw.yaml
+++ b/src/swagger/workItem/findOneSw.yaml
@@ -36,7 +36,10 @@ paths:
                         type: number
                       title:
                         type: string
-                      publish_date:
+                      published_from:
+                        type: string
+                        format: date
+                      published_to:
                         type: string
                         format: date
                       publish_media:
