--- a/src/swagger/workItem/searchSw.yaml
+++ b/src/swagger/workItem/searchSw.yaml
@@ -51,7 +51,10 @@ paths:
                           type: number
                         title:
                           type: string
-                        publish_date:
+                        published_from:
+                          type: string
+                          format: date
+                        published_to:
                           type: string
                           format: date
                         publish_media:
