--- a/src/swagger/workItem/findOneSw.yaml
+++ b/src/swagger/workItem/findOneSw.yaml
@@ -52,6 +52,8 @@ paths:
                         type: string
                       genre:
                         type: string
+                      is_visible:
+                        type: boolean
                       updated_at:
                         type: string
                         format: date
