--- a/src/swagger/workItem/searchSw.yaml
+++ b/src/swagger/workItem/searchSw.yaml
@@ -67,6 +67,8 @@ paths:
                           type: string
                         genre:
                           type: string
+                        is_visible:
+                          type: boolean
                         updated_at:
                           type: string
                           format: date
