--- a/src/swagger/media/findOneSw.yaml
+++ b/src/swagger/media/findOneSw.yaml
@@ -38,6 +38,8 @@ paths:
                         type: string
                       is_visible:
                         type: boolean
+                      hex_color:
+                        type: string
                       create_at:
                         type: string
                         format: date
