--- a/src/swagger/media/updateSw.yaml
+++ b/src/swagger/media/updateSw.yaml
@@ -22,6 +22,8 @@ paths:
               properties:
                 name:
                   type: string
+                hex_color:
+                  type: string
                 is_visible:
                   type: boolean
       responses:
@@ -46,6 +48,8 @@ paths:
                       id:
                         type: number
                       name:
+                        type: string
+                      hex_color:
                         type: string
                       is_visible:
                         type: boolean
