--- a/src/swagger/activityScope/findOneSw.yaml
+++ b/src/swagger/activityScope/findOneSw.yaml
@@ -40,9 +40,7 @@ paths:
                         type: number
                       author_id:
                         type: number
-                      start_year:
-                        type: string
-                      end_year:
+                      period:
                         type: string
                       updated_at:
                         type: string
