--- a/src/swagger/chronologyItem/findOneSw.yaml
+++ b/src/swagger/chronologyItem/findOneSw.yaml
@@ -34,16 +34,18 @@ paths:
                     properties:
                       id:
                         type: number
-                      author_id:
-                        type: number
-                      ref_text:
+                      age:
                         type: string
-                      ref_content:
+                      period:
                         type: string
-                      href:
+                        description: 연도
+                      content:
                         type: string
-                      img_src:
-                        type: string
+                        description: 내용
+                      is_visible:
+                        type: boolean
+                      proof_items:
+                        type: array
                       updated_at:
                         type: string
                         format: date
