--- a/src/swagger/proofItem/findOneSw.yaml
+++ b/src/swagger/proofItem/findOneSw.yaml
@@ -1,35 +1,18 @@
 
 paths:
-  /chronology/{id}:
-    patch:
+  /proof/{id}:
+    get:
       tags:
-        - Chronology
-      summary: Update chronology
-      consumes:
-        - application/json
+        - Proof
+      summary: Find One proofItem
       parameters:
         - name: id
           in: path
           required: true
-          description: chronology id
+          description: proofItem id
           schema:
             type: number
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                age:
-                  type: string
-                period:
-                  type: string
-                  description: 연도
-                content:
-                  type: string
-                  description: 내용
-                is_visible:
-                  type: boolean
+
       responses:
         200:
           description: "OK"
@@ -45,24 +28,25 @@ paths:
                   msg:
                     type: string
                     description: 메시지
-                    example: chronology 수정에 성공했습니다.
+                    example: proofItem을 찾는데 성공했습니다.
                   item:
                     type: object
                     properties:
                       id:
                         type: number
-                      age:
+                      chronology_id:
+                        type: number
+                      file_src:
                         type: string
-                      period:
+                      reference:
                         type: string
-                        description: 연도
+                        description: 상세정보 링크
                       content:
                         type: string
-                        description: 내용
+                        description: 본문 내용
                       is_visible:
                         type: boolean
-                      proof_items:
-                        type: array
+                        description: 공개 여부
                       updated_at:
                         type: string
                         format: date
