--- a/src/swagger/activityScope/updateSw.yaml
+++ b/src/swagger/activityScope/updateSw.yaml
@@ -26,9 +26,7 @@ paths:
                   type: number
                 author_id:
                   type: number
-                start_year:
-                  type: string
-                end_year:
+                period:
                   type: string
                 updated_at:
                   type: string
