--- a/src/swagger/proofItem/createSw.yaml
+++ b/src/swagger/proofItem/createSw.yaml
@@ -1,35 +1,33 @@
+tags:
+  - name: Proof
+    description: 증거 자료 API
 
 paths:
-  /chronology/{id}:
-    patch:
+  /proof:
+    post:
       tags:
-        - Chronology
-      summary: Update chronology
+        - Proof
+      summary: Create proofItem
       consumes:
         - application/json
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: chronology id
-          schema:
-            type: number
       requestBody:
         content:
           application/json:
             schema:
               type: object
               properties:
-                age:
+                chronology_id:
+                  type: number
+                  description: 작가 연보
+                file_base64:
                   type: string
-                period:
+                reference:
                   type: string
-                  description: 연도
                 content:
                   type: string
-                  description: 내용
                 is_visible:
                   type: boolean
+
       responses:
         200:
           description: "OK"
@@ -45,24 +43,25 @@ paths:
                   msg:
                     type: string
                     description: 메시지
-                    example: chronology 수정에 성공했습니다.
+                    example: proofItem을 생성에 성공했습니다.
                   item:
                     type: object
                     properties:
                       id:
                         type: number
-                      age:
+                      chronology_id:
+                        type: number
+                      file_src:
                         type: string
-                      period:
+                      reference:
                         type: string
-                        description: 연도
+                        description: 상세정보 링크
                       content:
                         type: string
-                        description: 내용
+                        description: 본문 내용
                       is_visible:
                         type: boolean
-                      proof_items:
-                        type: array
+                        description: 공개 여부
                       updated_at:
                         type: string
                         format: date
