add: visibility of ActivityScope

--- a/src/swagger/activityScope/createSw.yaml
+++ b/src/swagger/activityScope/createSw.yaml
@@ -24,6 +24,8 @@ paths:
                   type: number
                 period:
                   type: string
+                is_visible:
+                  type: boolean
 
       responses:
         200:
@@ -54,6 +56,8 @@ paths:
                         type: number
                       period:
                         type: string
+                      is_visible:
+                        type: boolean
                       updated_at:
                         type: string
                         format: date
