--- a/src/swagger/activityScope/searchSw.yaml
+++ b/src/swagger/activityScope/searchSw.yaml
@@ -79,6 +79,8 @@ paths:
                           type: number
                         period:
                           type: string
+                        is_visible:
+                          type: boolean
                         updated_at:
                           type: string
                           format: date
