--- a/src/swagger/activityScope/updateSw.yaml
+++ b/src/swagger/activityScope/updateSw.yaml
@@ -28,6 +28,8 @@ paths:
                   type: number
                 period:
                   type: string
+                is_visible:
+                  type: boolean
                 updated_at:
                   type: string
                   format: date
@@ -63,6 +65,8 @@ paths:
                         type: string
                       end_year:
                         type: string
+                      is_visible:
+                        type: boolean
                       updated_at:
                         type: string
                         format: date
