--- a/src/swagger/activityScope/findOneSw.yaml
+++ b/src/swagger/activityScope/findOneSw.yaml
@@ -42,6 +42,8 @@ paths:
                         type: number
                       period:
                         type: string
+                      is_visible:
+                        type: boolean
                       updated_at:
                         type: string
                         format: date
