--- a/src/swagger/workItem/findOneSw.yaml
+++ b/src/swagger/workItem/findOneSw.yaml
@@ -50,6 +50,8 @@ paths:
                         type: string
                       img_src:
                         type: string
+                      img_name:
+                        type: string
                       genre:
                         type: string
                       is_visible:
