--- a/src/swagger/proofItem/updateSw.yaml
+++ b/src/swagger/proofItem/updateSw.yaml
@@ -24,6 +24,8 @@ paths:
                   type: number
                 file_src:
                   type: string
+                file_name:
+                  type: string
                 reference:
                   type: string
                   description: 상세정보 링크
@@ -57,6 +59,8 @@ paths:
                       chronology_id:
                         type: number
                       file_src:
+                        type: string
+                      file_name:
                         type: string
                       reference:
                         type: string
