--- a/src/swagger/workItem/searchSw.yaml
+++ b/src/swagger/workItem/searchSw.yaml
@@ -95,6 +95,8 @@ paths:
                           type: string
                         img_src:
                           type: string
+                        img_name:
+                          type: string
                         genre:
                           type: string
                         is_visible:
